--- a/Professionals/res/layout/linearone.xml
+++ b/Professionals/res/layout/linearone.xml
@@ -25,9 +25,8 @@
 
     <TextView
         android:id="@+id/mahut"
-        android:layout_width="120dip"
+        android:layout_width="100dp"
         android:layout_height="28dp"
-        android:layout_weight="10"
         android:gravity="left"
         android:paddingLeft="1dp"
         android:textSize="15sp"
