--- a/Professionals/res/menu/context_menu.xml
+++ b/Professionals/res/menu/context_menu.xml
@@ -1,21 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <item
-        android:id="@+id/client"
-     
-        android:title="Delete Customer">
-    </item>
+   
     
 <item
         android:id="@+id/call"
      
-        android:title="Call">
+        android:title="התקשר">
     </item>
     <item
         android:id="@+id/buynotbuy"
         
-        android:title="Set Work Done">
+        android:title="סמן">
     </item>
     
 
