--- a/Professionals/res/layout/client.xml
+++ b/Professionals/res/layout/client.xml
@@ -19,10 +19,9 @@
         android:textStyle="bold" />
 
     <EditText
-        android:inputType="text"
         android:id="@+id/editText4"
         android:layout_width="wrap_content"
-        android:layout_height="44dp"
+        android:layout_height="30dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/editText3"
         android:layout_marginRight="20dp"
@@ -30,13 +29,14 @@
         android:background="@drawable/backt"
         android:ems="10"
         android:enabled="false"
+        android:inputType="text"
         android:textColor="@android:color/black"
         android:textStyle="bold" />
 
     <EditText
         android:id="@+id/editText5"
         android:layout_width="wrap_content"
-        android:layout_height="44dp"
+        android:layout_height="60dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/editText4"
         android:layout_marginRight="20dp"
@@ -44,7 +44,7 @@
         android:background="@drawable/backt"
         android:ems="10"
         android:enabled="false"
-        android:inputType="text"
+        android:inputType="textMultiLine"
         android:textColor="@android:color/black"
         android:textStyle="bold" />
 
@@ -108,16 +108,27 @@
         android:onClick="back"
         android:text="@string/back" />
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="150dp"
-        android:layout_height="80dp"
-        android:layout_alignRight="@+id/button1"
+    <EditText
+        android:id="@+id/editText6"
+        android:layout_width="wrap_content"
+        android:layout_height="90dp"
+        android:layout_alignLeft="@+id/editText5"
         android:layout_below="@+id/editText5"
-        android:background="@drawable/equipment"
-        android:onClick="acc"
-        android:text="@string/click_for_more_equipment"
+        android:layout_marginTop="14dp"
+        android:background="@drawable/backt"
+        android:ems="10"
+        android:enabled="false"
+        android:inputType="textMultiLine"
         android:textColor="@android:color/black"
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/button2"
+        android:layout_centerVertical="true"
+        android:onClick="esend"
+        android:text="Email ME" />
 
 </RelativeLayout>
