--- a/Professionals/res/layout/linearlayout.xml
+++ b/Professionals/res/layout/linearlayout.xml
@@ -31,8 +31,8 @@
         android:layout_below="@+id/mahut"
         android:layout_weight="1.0"
         android:adjustViewBounds="true"
-        android:gravity="right"
-        android:textColor="#ffffff"
+            android:gravity="left"
+         android:textColor="@android:color/black"
         android:textStyle="bold" />
 
 </RelativeLayout>
