--- a/Professionals/res/layout/linearone.xml
+++ b/Professionals/res/layout/linearone.xml
@@ -4,41 +4,37 @@
     android:layout_height="40dp"
    android:background="@drawable/backt"
     android:scaleType="fitXY"
+    android:layout_weight="92"
     android:orientation="horizontal" >
 
-    <ImageView
-
-        android:id="@+id/flag"
-        android:layout_width="26dip"
-        android:layout_height="28dip"
-        android:layout_weight="12"
-        android:paddingTop="1dp" />
-
+    
+    
+    
     <TextView
         android:id="@+id/name"
         android:layout_width="136dp"
-        android:layout_height="38dp"
+        android:layout_height="25dp"
         android:gravity="left"
-        android:textColor="@android:color/black"
+        android:layout_weight="50"
         android:textSize="15sp"
+        android:textColor="@android:color/black"
         android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="133dp"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textMultiLine" />
 
     <TextView
         android:id="@+id/mahut"
         android:layout_width="100dp"
-        android:layout_height="28dp"
-        android:gravity="left"
+        android:layout_height="25dp"
         android:layout_weight="30"
-        android:paddingLeft="1dp"
+        
+        android:gravity="right"
+        
+        android:textColor="#0099CC"
         android:textSize="15sp"
-        android:textStyle="bold" 
-         android:inputType="textMultiLine"/>
-
+        android:textStyle="bold" />
+<ImageView
+        android:id="@+id/flag"
+        android:layout_width="26dip"
+        android:layout_height="28dip"
+        android:layout_weight="12" />
+    
 </LinearLayout>
